// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadableComponent loading error 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent loading error 2`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent loading error 3`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false,"error":{}}
</div>
`;

exports[`LoadableComponent loading success 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent loading success 2`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent loading success 3`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;

exports[`LoadableComponent loading success 4`] = `
<div>
  MyComponent 
  {"prop":"bar"}
</div>
`;

exports[`LoadableComponent preload 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent preload 2`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`LoadableComponent preload 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`LoadableComponent preloadReady many 1`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`LoadableComponent preloadReady missing 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent preloadReady one 1`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`LoadableComponent preloadReady undefined 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent render 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent render 2`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent render 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`LoadableComponent server side rendering 1`] = `
<div>
  fixture1
</div>
`;

exports[`LoadableComponent server side rendering es6 1`] = `
<div>
  fixture2
</div>
`;

exports[`LoadableComponent timeout 1`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent timeout 2`] = `
<div>
  MyLoadingComponent 
  {"timedOut":false}
</div>
`;

exports[`LoadableComponent timeout 3`] = `
<div>
  MyLoadingComponent 
  {"timedOut":true}
</div>
`;

exports[`LoadableComponent timeout 4`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;
